tests/paczka1/fuzzy1/88416444.err
Error in line 1: A836 A58 93,2
Error in line 17: fxg26OOwJ4Q A836 77,0
Error in line 21: AURGOsXO6Ks A686 17,1
Error in line 25: AURGOsXO6Ks A926 85,3
